--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "bin/test"
   },
   "dependencies": {
+    "dotenv": "^4.0.0",
     "minimetoken": "^0.1.7",
     "truffle": "^4.0.1",
     "zeppelin-solidity": "^1.4.0"
