--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "John Backus <johncbackus@gmail.com>",
   "license": "MIT",
   "scripts": {
+    "dev": "lite-server",
     "test": "bin/test"
   },
   "dependencies": {
@@ -14,6 +15,7 @@
     "zeppelin-solidity": "^1.4.0"
   },
   "devDependencies": {
+    "lite-server": "^2.3.0",
     "@types/bignumber.js": "^4.0.3",
     "@types/chai": "^4.0.4",
     "@types/chai-as-promised": "^0.0.31",
